--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <title>ModerlViewerを使ったWebARページ</title>
-  </head>
-  <body>
-  <script 
-      type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js">
+<html>
 
-  </script>
+<head>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+</head>
 
-    <model-viewer  
-    ar
-    alt="Kintoki"
-    src="kintoki.glb" 
-    ios-src="kintoki.usdz" 
+<body>
+    <a-scene embedded arjs="debugUIEnabled:false;" renderer="gammaOutput: true;" vr-mode-ui="enabled: false">
+        <a-assets>
+            <a-asset-item id="model" src="kintoki.glb"></a-asset-item>
+        </a-assets>
 
-    style="width:800px;height:1000px;"                  
+        <a-entity scale="100 100 100" position="0 0.4 -3" animation-mixer="clip:*" gltf-model="#model" visible="true">
+        </a-entity>
 
-    background-color="#70BCD1"
-    shadow-intensity="0.7"
-    camera-controls
-    interaction-prompt="auto"
-    auto-rotate ar magic-leap>
+        <a-light type="ambient" color="#ffffff"></a-light>
+        <a-light type="point" intensity="2" position="0 4 0"></a-light>
+    </a-scene>
+</body>
 
-
-    </model-viewer>
-  </body>
 </html>
