--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <html>
-
 <head>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+	<meta charset="UTF-8"/>
+	<link rel="shortcut icon" href="./vr/images/icons/favicon.ico">
+	<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+	<script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
+	<script src="https://unpkg.com/three@0.131.3/examples/js/loaders/TDSLoader.js"></script>
+	<script src="./main.js"></script>
 </head>
-
 <body>
-    <a-scene embedded arjs="debugUIEnabled:false;" renderer="gammaOutput: true;" vr-mode-ui="enabled: false">
-        <a-assets>
-            <a-asset-item id="model" src="kintoki.glb"></a-asset-item>
-        </a-assets>
+	<a-scene stats loading-screen="dotsColor: gray; backgroundColor: lightgray">
+		
+		<!-- Sky, Emvironment -->
+		<a-sky color="#ECECEC"></a-sky>
+		<a-entity environment="preset: default; dressingAmount: 30"></a-entity>
 
-        <a-entity scale="100 100 100" position="0 0.4 -3" animation-mixer="clip:*" gltf-model="#model" visible="true">
-        </a-entity>
+		<!-- Assets -->
+		<a-assets timeout="30000">
+			<a-asset-item id="kintoki_gltf" src="kintoki.gltf"></a-asset-item>
+		</a-assets>
 
-        <a-light type="ambient" color="#ffffff"></a-light>
-        <a-light type="point" intensity="2" position="0 4 0"></a-light>
-    </a-scene>
+		<!-- GLTF, Obj -->
+		<a-gltf-model src="kintoki_gltf" position="-5 5 -15" rotation="0 -20 0"></a-gltf-model>
+
+	</a-scene>
 </body>
-
 </html>
