--- a/index.html
+++ b/index.html
@@ -1,27 +1,14 @@
 <html>
-<head>
-	<meta charset="UTF-8"/>
-	<link rel="shortcut icon" href="./vr/images/icons/favicon.ico">
-	<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-	<script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
-	<script src="https://unpkg.com/three@0.131.3/examples/js/loaders/TDSLoader.js"></script>
-	<script src="./main.js"></script>
-</head>
-<body>
-	<a-scene stats loading-screen="dotsColor: gray; backgroundColor: lightgray">
-		
-		<!-- Sky, Emvironment -->
-		<a-sky color="#ECECEC"></a-sky>
-		<a-entity environment="preset: default; dressingAmount: 30"></a-entity>
-
-		<!-- Assets -->
-		<a-assets timeout="30000">
-			<a-asset-item id="kintoki_gltf" src="kintoki.gltf"></a-asset-item>
-		</a-assets>
-
-		<!-- GLTF, Obj -->
-		<a-gltf-model src="kintoki_gltf" position="-5 5 -15" rotation="0 -20 0"></a-gltf-model>
-
-	</a-scene>
-</body>
+  <head>
+    <script src="https://aframe.io/releases/1.4.1/aframe.min.js"></script>
+  </head>
+  <body>
+    <a-scene>
+      <a-assets timeout="10000">
+        <a-asset-item id="kintoki_gltf" src="kintoki.gltf"></a-asset-item>
+      </a-assets>
+      <a-gltf-model src="#submarine_gltf" position="-5 5 -15" rotation="0 -20 0"></a-gltf-model>
+      <a-sky color="#ECECEC"></a-sky>
+    </a-scene>
+  </body>
 </html>
