--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <a-assets timeout="10000">
         <a-asset-item id="kintoki_gltf" src="kintoki.gltf"></a-asset-item>
       </a-assets>
-      <a-gltf-model src="#submarine_gltf" position="-5 5 -15" rotation="0 -20 0"></a-gltf-model>
+      <a-gltf-model src="kintokie_gltf" position="-5 5 -15" rotation="0 -20 0"></a-gltf-model>
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
   </body>
