--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
-    <script src="https://aframe.io/releases/1.4.1/aframe.min.js"></script>
+    	<meta charset="UTF-8"/>
+    	<link rel="shortcut icon" href="./vr/images/icons/favicon.ico">
+    	<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    	<script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
+    	<script src="https://unpkg.com/three@0.131.3/examples/js/loaders/TDSLoader.js"></script>
+    	<script src="./main.js"></script>
   </head>
   <body>
     <a-scene>
