--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
-    	<meta charset="UTF-8"/>
-    	<link rel="shortcut icon" href="./vr/images/icons/favicon.ico">
-    	<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    	<script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
-    	<script src="https://unpkg.com/three@0.131.3/examples/js/loaders/TDSLoader.js"></script>
-    	<script src="./main.js"></script>
+    <meta charset="utf-8" />
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+    <title>untitled</title>
   </head>
   <body>
-    <a-scene>
-      <a-assets timeout="30000">
-        <a-asset-item id="kintoki_gltf" src="kintoki.gltf"></a-asset-item>
-      </a-assets>
-      <a-gltf-model src="kintokie_gltf" position="-5 5 -15" rotation="0 -20 0"></a-gltf-model>
-      <a-sky color="#ECECEC"></a-sky>
+    <a-scene embedded arjs>
+      <a-box position="5 0 -7" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
     </a-scene>
   </body>
 </html>
