--- a/index.html
+++ b/index.html
@@ -7,12 +7,32 @@
     <title>untitled</title>
   </head>
   <body>
-    <a-scene embedded arjs>
-      <a-assets timeout="30000">
-        <a-asset-item id="kintoki_gltf" src="kintoki.gltf"></a-asset-item>
+    <a-scene>
+            <!-- 3Dモデル（gltfファイル） -->
+      <a-assets>
+        <a-asset-items id="kintoki" src="kintoki.gltf" ></a-asset-items>
       </a-assets>
-      <a-gltf-model src="kintokie_gltf" position="-5 5 -15" rotation="0 -20 0"></a-gltf-model>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-entity gltf-model="#kintoki" scale="0.01 0.01 0.01"></a-entity>
+      <!-- カメラ設置 -->
+      <a-camera
+        position="0 10 30"
+        cursor-visible="true"
+        cursor-scale="5"
+        cursor-color="#0095DD"
+        cursor-opacity="1">
+      </a-camera>
+      <!-- ディレクショナルライト（平行光源）の追加 -->
+      <a-light
+        type="directional"
+        color="#FFF"
+        intensity="0.5"
+        position="-1 1 2">
+      </a-light>
+      <!-- アンビエントライトの追加（環境光） -->
+      <a-light
+        type="ambient"
+        color="#FFF">
+      </a-light>
     </a-scene>
   </body>
 </html>
