--- a/index.html
+++ b/index.html
@@ -7,32 +7,16 @@
     <title>untitled</title>
   </head>
   <body>
-    <a-scene>
-            <!-- 3Dモデル（gltfファイル） -->
-      <a-assets>
-        <a-asset-items id="kintoki" src="kintoki.gltf" ></a-asset-items>
-      </a-assets>
-      <a-entity gltf-model="#kintoki" scale="1 1 1"></a-entity>
-      <!-- カメラ設置 -->
-      <a-camera
-        position="0 10 30"
-        cursor-visible="true"
-        cursor-scale="5"
-        cursor-color="#0095DD"
-        cursor-opacity="1">
-      </a-camera>
-      <!-- ディレクショナルライト（平行光源）の追加 -->
-      <a-light
-        type="directional"
-        color="#FFF"
-        intensity="0.5"
-        position="-1 1 2">
-      </a-light>
-      <!-- アンビエントライトの追加（環境光） -->
-      <a-light
-        type="ambient"
-        color="#FFF">
-      </a-light>
+       <a-scene embedded arjs="debugUIEnabled:false;" renderer="gammaOutput: true;" vr-mode-ui="enabled: false">
+        <a-assets>
+            <a-asset-item id="model" src="kintoki.gltf"></a-asset-item>
+        </a-assets>
+
+        <a-entity scale="100 100 100" position="0 0.4 -3" animation-mixer="clip:*" gltf-model="#model" visible="true">
+        </a-entity>
+
+        <a-light type="ambient" color="#ffffff"></a-light>
+        <a-light type="point" intensity="2" position="0 4 0"></a-light>
     </a-scene>
   </body>
 </html>
