--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
        <a-scene embedded arjs="debugUIEnabled:false;" renderer="gammaOutput: true;" vr-mode-ui="enabled: false">
         <a-assets>
-            <a-asset-item id="model" src="ddcna4.gltf"></a-asset-item>
+            <a-asset-item id="model" src="kintoki.gltf"></a-asset-item>
         </a-assets>
 
         <a-entity scale="1 1 1" position="0 0.4 0" animation-mixer="clip:*" gltf-model="#model" visible="true">
