--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
        <a-scene embedded arjs="debugUIEnabled:false;" renderer="gammaOutput: true;" vr-mode-ui="enabled: false">
         <a-assets>
-            <a-asset-item id="model" src="kintoki.gltf"></a-asset-item>
+            <a-asset-item id="model" src="ddckintoki3.gltf"></a-asset-item>
         </a-assets>
 
-        <a-entity scale="0.9 0.9 0.9" position="0 0.4 0" animation-mixer="clip:*" gltf-model="#model" visible="true">
+        <a-entity scale="0.7 0.7 0.7" position="0 0.4 0" animation-mixer="clip:*" gltf-model="#model" visible="true">
         </a-entity>
 
         <a-light type="ambient" color="#ffffff"></a-light>
